--- a/_posts/2025-03-26-lab_at_cns.md
+++ b/_posts/2025-03-26-lab_at_cns.md
@@ -6,8 +6,8 @@ date: 2025-03-26
 
 Some members of the lab are at CNS! Come to following posters to chat. 🙂 
 
-- Poster C137: Phoebe Chen – Understanding spontaneous false memory in the naturalistic recall of narratives
-- Poster E102: Jiajie Zou – Chunking Constrains Prediction during Language Comprehension
-- Poster E104: Leonardo Zeine – Differentiating endogenous and entrained delta-band rhythms in the brain: a naturalistic story-listening experiment
-- Poster F61: Yue Sun – Complex impact of stimulus envelope on motor synchronization to sound
-- Poster F63: Berfin Bastug – Sensorimotor Engagement Facilitates Regularity Detection During Auditory Scene Analysis
+- **Poster C137**: Phoebe Chen – Understanding spontaneous false memory in the naturalistic recall of narratives
+- **Poster E102**: Jiajie Zou – Chunking Constrains Prediction during Language Comprehension
+- **Poster E104**: Leonardo Zeine – Differentiating endogenous and entrained delta-band rhythms in the brain: a naturalistic story-listening experiment
+- **Poster F61**: Yue Sun – Complex impact of stimulus envelope on motor synchronization to sound
+- **Poster F63**: Berfin Bastug – Sensorimotor Engagement Facilitates Regularity Detection During Auditory Scene Analysis
