--- a/_posts/2025-05-09-sun.md
+++ b/_posts/2025-05-09-sun.md
@@ -1,5 +1,5 @@
 ---
-title: "New paper!"
+title: "New paper! (Sun et al., JNeuro, 2025)"
 permalink: /posts/2025/paper_sun
 date: 2025-05-16
 citation: 'Sun Y, Michalareas G, Ghitza O and Poeppel D (2025). Complex impact of stimulus envelope on motor synchronization to sound. Journal of Neuroscience.'
