--- a/_posts/2025-05-20-zhou.md
+++ b/_posts/2025-05-20-zhou.md
@@ -1,6 +1,6 @@
 ---
-title: "New preprint!"
-permalink: /posts/2025/paper_sun
+title: "New preprint! (Zou et al., 2025)" 
+permalink: /posts/2025/paper_zou
 date: 2025-05-16
 citation: 'Zou J, Poeppel D and Ding N (2025). Chunking Constrains Prediction during Language Comprehension.'
 ---
