--- a/_posts/2025-10-14-trf4.md
+++ b/_posts/2025-10-14-trf4.md
@@ -6,8 +6,8 @@ date: 2025-10-14
 
 Find lab members at the Timing Research Forum 4 in Tokyo!
 
-- [O6-02]: Matthias Grabenhorst – The anticipation of imminent events is time-scale invariant.
-- [O8-01]: Leonardo Zeine – Towards Differentiating Endogenously and Exogenously Driven Rhythms in the Brain: Syntax, Prosody and Delta-Band Activity
-- [P3-04]: Yue Sun – Complex impact of stimulus envelope on motor synchronization to sound
-- [P3-23]: Berfin Bastug – Auditory Object Formation in Temporally Complex Acoustic Scenes
+- (O6-02): Matthias Grabenhorst – The anticipation of imminent events is time-scale invariant.
+- (O8-01): Leonardo Zeine – Towards Differentiating Endogenously and Exogenously Driven Rhythms in the Brain: Syntax, Prosody and Delta-Band Activity
+- (P3-04): Yue Sun – Complex impact of stimulus envelope on motor synchronization to sound
+- (P3-23): Berfin Bastug – Auditory Object Formation in Temporally Complex Acoustic Scenes
 
