--- a/_posts/2025-10-14-trf4.md
+++ b/_posts/2025-10-14-trf4.md
@@ -4,7 +4,7 @@ permalink: /posts/2025/trf4
 date: 2025-10-14
 ---
 
-Find lab members at the Timing Research Forum 4 in Tokyo!
+Find lab members at the [Timing Research Forum 4](https://sites.google.com/view/trf4tokyo/home) in Tokyo!
 
 - (O6-02): Matthias Grabenhorst – The anticipation of imminent events is time-scale invariant.
 - (O8-01): Leonardo Zeine – Towards Differentiating Endogenously and Exogenously Driven Rhythms in the Brain: Syntax, Prosody and Delta-Band Activity
