--- a/_publications/2027-01-01-garcia.md
+++ b/_publications/2027-01-01-garcia.md
@@ -6,8 +6,8 @@ date: 2026-01-15
 year: 2026
 number: 235
 venue: 'bioRxiv'
-authors: 'Garcia-Rosales F, Sotomayor-Gomez B, Poeppel D, Hechavarria JC'
-citation: 'Garcia-Rosales F, Sotomayor-Gomez B, Poeppel D, Hechavarria JC (2026). Vocal production differentially affects fast-and broad-spiking neurons in auditory cortex. bioRxiv.'
+authors: 'García-Rosales F, Sotomayor-Gomez B, Poeppel D, Hechavarria JC'
+citation: 'García-Rosales F, Sotomayor-Gomez B, Poeppel D, Hechavarria JC (2026). Vocal production differentially affects fast-and broad-spiking neurons in auditory cortex. bioRxiv.'
 category: 'preprint'
 ---
 
