--- a/_publications/2027-01-01-zou.md
+++ b/_publications/2027-01-01-zou.md
@@ -1,13 +1,13 @@
 ---
 title: "Chunking Constrains Prediction during Language Comprehension"
 collection: publications
-permalink: /publication/2025_ding_zou_ssrn
+permalink: /publication/2025_ding_zou_research_square
 date: 2025-05-20
 year: 2025
 number: 235
-venue: 'SSRN'
+venue: 'Research Square'
 authors: 'Zou J, Ding N, Poeppel D'
-citation: 'Zou J, Ding N, Poeppel D (2025). Chunking Constrains Prediction during Language Comprehension. SSRN.'
+citation: 'Zou J, Ding N, Poeppel D (2025). Chunking Constrains Prediction during Language Comprehension. Research Square.'
 url: 'https://www.researchsquare.com/article/rs-6472973/v1'
 category: 'preprint'
 ---
